@@ -1,3 +1,7 @@
+2008-08-19 Ingo Renner  <ingo@typo3.org>
+
+	* added application/widget selector to flexform
+
 2008-08-08 Ingo Renner  <ingo@typo3.org>
 
 	* added Application Manager
